src/objects/Location_Risk_Association__c.object
<CustomObject>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>160</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RK_Hierarchy__c</fullName>
        <label>Hierarchy</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Location/Risk Associations</relationshipLabel>
        <relationshipName>Location_Risk_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Associated Locations</relationshipLabel>
        <relationshipName>Location_Risk_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Location/Risk Association</label>
    <nameField>
        <displayFormat>LR{00000}</displayFormat>
        <label>Location/Risk Association Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location/Risk Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>